# torch_ecg

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.html  CHANGELOG.md  CHANGELOG.rst  CITATIONS.bib  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  augmenters.html  bib_lookup.py  components.html  compose.yaml  databases.html  examples.html  exec_git.py  fast_test.ipynb  formatting.sh  genindex.html  index.html  install.html  losses.html  models.html  objects.inv  preprocessors.html  push2pypi.sh  py-modindex.html  pyproject.toml  pyrightconfig.json  requirements.txt  search.html  searchindex.js  setup.py  tutorial.html  (+1 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto-label.yml  check-formatting.yml  codeql-analysis.yml  docs-publish.yml  docs.yml  publish.yml  run-pytest.yml  test-databases.yml  test-docs.yml  test-models.yml  test-ppl.yml
_modules/: index.html
_sources/: CHANGELOG.rst.txt  examples.rst.txt  index.rst.txt  install.rst.txt  preprocessors.rst.txt  tutorial.rst.txt
_sources/api/: components.rst.txt  losses.rst.txt
_static/: documentation_options.js
_static/css/: codeblock.css  custom.css
_static/js/: codeblock.js
api/: augmenters.html  components.html  databases.html  index.html  losses.html  models.html  preprocessors.html  utils.html
benchmarks/: .gitignore  README.md  __init__.py
benchmarks/train_crnn_cinc2020/: README.md  cfg.py  dataset.py  model.py  scoring_aux_data.py  scoring_metrics.py  train.py  train_models.ipynb  trainer.py
benchmarks/train_crnn_cinc2021/: .gitignore  README.md  cfg.py  cfg_models.py  data_reader.py  dataset.py  helper_code.py  model.py  scoring_aux_data.py  scoring_metrics.py  special_detectors.py  special_detectors_test.py  train.py  train_models.ipynb  trainer.py
benchmarks/train_crnn_cinc2023/: .dockerignore  .gitignore  CITATIONS.bib  Dockerfile  Dockerfile.torch2  LICENSE  README.md  cfg.py  cfg_models.py  data_reader.py  dataset.py  helper_code.py  outputs.py  requirements-no-torch.txt  requirements.txt  trainer.py
benchmarks/train_crnn_cpsc2020/: CPSC2020_score.py  README.md  model.py  train.py
benchmarks/train_hybrid_cpsc2020/: CPSC2020_challenge.py  CPSC2020_score.py  README.md  cfg.py  cfg_30s.py  dataset.py  dataset_simplified.py  metrics.py  metrics_test.py  model.py  trainer.py
benchmarks/train_hybrid_cpsc2021/: .gitignore  README.md  aux_metrics.py  cfg.py  dataset.py  entry_2021.py  graphical-abstract.tex  model.py  score_2021.py  scoring_metrics.py  train_models.ipynb  trainer.py
benchmarks/train_mtl_cinc2022/: .gitignore  Dockerfile  LICENSE  README.md  cfg.py  cfg_models.py  data_reader.py  dataset.py  exec_git.py  helper_code.py  inputs.py  no-test.Dockerfile  outputs.py  requirements-no-torch.txt  requirements.txt  team_code.py  test_docker.py  train_models.ipynb  trainer.py
benchmarks/train_multi_cpsc2019/: CPSC2019_challenge.py  README.md  cfg.py  cpsc2019_score.py  dataset.py  metrics.py  model.py  train_models.ipynb  trainer.py
benchmarks/train_seq_lab_net_cpsc2019/: cfg.py  dataset.py  model.py  train.py  trainer.py  utils.py
benchmarks/train_unet_cpsc2019/: README.md  cfg.py  cpsc2019_score.py  dataset.py  metrics.py  model.py  train.py  trainer.py
benchmarks/train_unet_ludb/: .gitignore  README.md  cfg.py  data_reader.py  dataset.py  metrics.py  model.py  train.py  train_models.ipynb  trainer.py
docs/: .gitignore  requirements.txt
docs/source/: CHANGELOG.rst  conf.py  databases.rst  index.rst  install.rst  models.rst  preprocessors.rst  references.bib
legacy/: _pantompkins.py
references/: __init__.py
references/ati_cnn/: ati_cnn_model.py  const.py  crnn_keras.py  crnn_torch.py  init_test.ipynb  scoring_metrics.py  ti_cnn_model.py  train_das.py
references/cpsc2019/: cpsc2019_score.py
references/encase/: AUTHORS.txt  README.md  answers.txt  preprocess_sub.m  qrs_detect2.m  score2017Challenge.m
sample-data/: .gitignore  cinc2022_training_data.csv
sample-data/cinc2021/: E07500.hea  E07500.mat  E07501.hea  E07501.mat  E07502.hea  E07502.mat  E07503.hea  E07503.mat  E07504.hea  E07504.mat  E07505.hea  E07505.mat  E07506.hea  E07506.mat  E07507.hea  E07507.mat  E07508.hea  E07508.mat  E07509.hea  E07509.mat  E07510.hea  E07511.hea  E07511.mat  E07512.hea  E07512.mat  E07513.hea  E07513.mat  E07514.hea  E07514.mat  E07515.hea  E07515.mat  E07516.hea  E07516.mat  E07517.hea  E07517.mat  E07518.hea  E07518.mat  E07519.hea  E07519.mat  HR06000.hea  (+63 more)
sample-data/cpsc2018/: A1980.mat  A1981.mat  A1982.mat  A1983.mat  A1984.mat  A1985.mat  A1986.mat  A1987.mat  A1988.mat  A1989.mat
sample-data/cpsc2019/: records.json  train_test_split_0.80.json
sample-data/cpsc2021/: data_101_6.atr  data_101_6.hea  data_101_8.atr  data_101_8.hea  data_101_9.atr  data_101_9.hea  data_21_7.atr  data_21_7.hea  data_21_8.atr  data_21_8.hea  data_21_9.atr  data_21_9.hea  data_35_10.atr  data_35_10.hea  data_35_4.atr  data_35_4.hea  data_35_6.atr  data_35_6.hea  data_84_1.atr  data_84_1.hea  data_84_2.atr  data_84_2.hea  data_84_3.atr  data_84_3.hea  data_8_2.atr  data_8_2.hea  data_8_3.atr  data_8_3.hea  data_8_4.atr  data_8_4.hea  data_92_12.atr  data_92_12.hea  data_92_19.atr  data_92_19.hea  data_92_4.atr  data_92_4.hea  diagnoses_records_list.json  stats.csv  test_ratio_20.json  train_ratio_80.json
test/: _nets_test.py  model_config_test.py  requirements.txt  test_augmenters.py  test_cfg.py  test_cnn.py  test_download.py  test_downstream_tasks.py  test_loss.py  test_metrics.py  test_model_configs.py  test_nets.py  test_pipelines.py  test_preproc_perf.py  test_preprocessors.py  test_preprocessors_t.py
test/test_components/: test_augmenters.py  test_inputs.py  test_loggers.py  test_metrics.py  test_outputs.py  test_trainer.py
test/test_data/: E00666.hea  E00666.mat  JS00666.hea  JS00666.mat  __init__.py  data_66_16.atr  data_66_16.hea
test/test_databases/: test_afdb.py  test_apnea_ecg.py  test_base.py  test_cachet_cadb.py  test_cinc2017.py  (+14 more)
torch_ecg/: __init__.py  cfg.py
(+773 files in other folders)
