[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch-ecg"
dynamic = ["version"]
description = "A Deep Learning Framework for ECG Processing Tasks Based on PyTorch"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "DeepPSP", email = "wenh06@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bib-lookup",
    "biosppy",
    "boto3",
    "Cython",
    "deprecate-kwargs",
    "deprecated",
    "easydict",
    "einops",
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "pyEDFlib",
    "PyWavelets",
    "requests",
    "safetensors",
    "scikit-learn",
    "scipy",
    "soundfile",
    "tensorboardX",
    "torch",
    "torch-optimizer",
    "torchsummary",
    "tqdm",
    "typing-extensions",
    "wfdb",
    "xmltodict",
    "PeakUtils",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "gdown",
    "librosa",
    "nbsphinx",
    "numpydoc",
    "openpyxl",
    "packaging",
    "pcg-springer-features",
    "pre-commit",
    "pydata-sphinx-theme",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "sphinx-autobuild",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-emoji-favicon",
    "sphinx-markdown-tables",
    "sphinx-multiversion",
    "sphinx-rtd-theme",
    "sphinx-theme",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-tikz",
    "tensorboard",
    "torch_audiomentations",
    "torchaudio",
]
docs = [
    "nbsphinx",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-emoji-favicon",
    "sphinx-markdown-tables",
    "sphinx-multiversion",
    "sphinx-rtd-theme",
    "sphinx-theme",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-tikz",
]
test = [
    "black",
    "flake8",
    "gdown",
    "librosa",
    "openpyxl",
    "packaging",
    "pcg-springer-features",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tensorboard",
    "torch_audiomentations",
    "torchaudio",
]

[project.urls]
Homepage = "https://github.com/DeepPSP/torch_ecg"

[tool.hatch.version]
path = "torch_ecg/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/torch_ecg",
]

# configuration for pytest and coverage
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv -s --cov=torch_ecg --ignore=test/test_pipelines"
testpaths = ["test"]

[tool.coverage.run]
source = ["torch_ecg"]
omit = [
  "torch_ecg/databases/nsrr_databases/shhs.py",
]

[tool.coverage.report]
omit = [
  "torch_ecg/databases/nsrr_databases/shhs.py",
]
exclude_also = [
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # NSRR databases are ignored temporarily, since data access is denied by the US government
    "torch_ecg/databases/nsrr_databases/*",
    "^class NSRRDataBase\\(.*\\):",
    # temporarily ignore torch_ecg/components/nas.py since it's not implemented completely
    "torch_ecg/components/nas.py",
    # temporarily ignore torch_ecg/models/grad_cam.py since it's not implemented completely
    "torch_ecg/models/grad_cam.py",
    # temporarily ignore torch_ecg/ssl since it's not implemented
    "torch_ecg/ssl/*",
]
# show_missing = true
# skip_covered = true
